@@ -1,30 +1,23 @@
+// src/main/java/com/example/demo/security/CustomUserDetailsService.java
 package com.example.demo.security;
 
 import com.example.demo.model.User;
 import com.example.demo.repository.UserRepository;
+import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.core.userdetails.UserDetails;
-import org.springframework.security.core.userdetails.UserDetailsService;
+import org.springframework.security.core.userdetails.*;
+import org.springframework.stereotype.Service;
+import java.util.Collections;
 
-import java.util.List;
-
+@Service
+@RequiredArgsConstructor
 public class CustomUserDetailsService implements UserDetailsService {
-
-    private final UserRepository userRepository;
-
-    public CustomUserDetailsService(UserRepository userRepository) {
-        this.userRepository = userRepository;
-    }
+    private final UserRepository repo;
 
     @Override
-    public UserDetails loadUserByUsername(String username) {
-        User u = userRepository.findByEmail(username)
-                .orElseThrow(() -> new RuntimeException("User not found"));
-
+    public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
+        User u = repo.findByEmail(email).orElseThrow(() -> new UsernameNotFoundException("User not found"));
         return new org.springframework.security.core.userdetails.User(
-                u.getEmail(),
-                u.getPassword(),
-                List.of(new SimpleGrantedAuthority("ROLE_" + u.getRole()))
-        );
+            u.getEmail(), u.getPassword(), Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + u.getRole())));
     }
 }
